Fix broken styles for Make a payment / pay bills payee selector type

--- a/apps/site-app/src/containers/Accounts/BillPayments/styles.module.less
+++ b/apps/site-app/src/containers/Accounts/BillPayments/styles.module.less
@@ -1,7 +1,7 @@
 @import "~@the-coin/site-base/styles/variables.less";
 
 .selectableCards{
-  display: inline;
+  display: inline-flex;
   width: 20%;
   img{
     margin-bottom: 10px;
